--- a/project/build.properties
+++ b/project/build.properties
@@ -1,6 +1,6 @@
 #Project properties
 #Fri Sep 09 22:04:38 EST 2011
-project.organization=angry
+project.organization=net.ceg
 project.name=ratelimiter
 sbt.version=0.7.7
 project.version=1.0
